<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">StudyBuddy</string>
    <string name="splash_text">StudyBuddy</string>
    <string name="hello_world">Hello World!</string>
    <string name="cal_prev_month">Previous Month</string>
    <string name="cal_next_month">Next Month</string>
    <string name="cal_placeholder">PlaceHolder 0000</string>
    <string name="cal_current_month">Previous Month</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_text_note">Note</string>
    <string name="title_activity_calen">My calendar</string>
    <string name="title_activity_day">My day</string>
    <string name="title_activity_event">Add event</string>
    <string name="main_Cal_button">Calendar v 1.0</string>
    <string name="title_activity_picture">Picture</string>
    <string name="title_activity_to_do_list">Reminders</string>
    <string name="title_activity_my_service">MyService</string>
    
    <string name="action_orientation">Switch Orientation</string>
    <string name="action_create_text">Enter text</string>
    <string name="action_record_sound">Record sound</string>
    <string name="action_take_photo">Take picture</string>
    <string name="action_take_video">Take video</string>
    <string name="action_photo_view">View photo</string>
    <string name="action_button_record">Rec</string>
    <string name="action_play_sound">Play sound</string>
    <string name="action_pause_sound">Pause sound</string>
    <string name="action_stop_sound">Stop sound</string>
    <string name="action_save">Save sound</string>
    <string name="action_save_note">Save note</string>
    <string name="action_new_note">New note</string>
    <string name="action_unlock_view">Unlock position</string>
    <string name="action_lock_view">Lock position</string>
    <string name="action_delete_view">Remove</string>
    <string name="action_delete_sound">Delete sound</string>
    <string name="action_sound_rename">Rename</string>
    <string name="action_draw">Draw</string>
    <string name="action_add_event">Add event</string>
    <string name="action_edit_event">Edit event</string>
    <string name="action_create_event">Create event</string>
    <string name="action_startDraw">Start handwriting</string>
    <string name="action_eraser">Erase</string>
    <string name="action_undoDraw">Undo</string>
    <string name="action_redoDraw">Redo</string>
    <string name="action_clearAllDraw">Clear all</string>
    <string name="action_saveDraw">Save</string>
    <string name="action_changePenWidth">Change width</string>
    <string name="action_penWidthThick">Change width to thick</string>
    <string name="action_penWidthThin">Change width to thin</string>
    <string name="action_changePenColor">Change color</string>
    <string name="action_penColorBlack">Change color to black</string>
    <string name="action_penColorBlue">Change color to blue</string>
    <string name="action_penColorCyan">Change color to cyan</string>
    <string name="action_penColorGreen">Change color to green</string>
    <string name="action_penColorRed">Change color to red</string>
    <string name="action_penColorYellow">Change color to yellow</string>
    <string name="action_penColorWhite">Change color to white</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="title_activity_settings_fragment">SettingsFragment</string>
    <string name="title_activity_help">Help</string>
    <string name="title_activity_about">About activity</string>
    <string name="title_activity_add_task">Add task</string>
    <string name="title_activity_photo">Photoviewer</string>
    <string name="title_activity_update_task">Update task</string>
    <string name="title_activity_update_tast">Update task</string>
    <string name="title_activity_flash_main">My flashcards</string>
    <string name="title_activity_handwriting_main">My handwriting</string>
    <string name="date_time_format">MM/dd/yy - h:mm a</string>
    <string name="title_activity_splash_screen">SplashScreen</string>
    <string name="title_activity_to_do_main">My tasks</string>
    <string name="title_activity_setting">SettingActivity</string>
    <string name="activity_modify_task_title">Task</string>
    <string name="activity_view_task_title">View task</string>
    <string name="main_actionbar_add_title">Add task</string>
    <string name="modify_actionbar_save_title">Save</string>
    <string name="modify_actionbar_cancel_title">Cancel</string>
    <string name="view_actionbar_edit_title">Edit</string>
    <string name="view_actionbar_delete_title">Delete</string>
    <string name="task_name_label">Task</string>
    <string name="task_date_label">Date</string>
    <string name="task_time_label">Time</string>
    <string name="task_priority_label">Priority</string>
    <string name="task_notification_label">Notification</string>
    <string name="modify_edittext_hint">Enter task</string>
    <string name="modify_priority_yes">Urgent</string>
    <string name="modify_priority_no">Not urgent</string>
    <string name="modify_cancel_posbutton">Yes</string>
    <string name="modify_cancel_negbutton">No</string>
    <string name="modify_cancel_textview">Are you sure you want to cancel?</string>

    <string-array name="modify_priority">
        <item>@string/modify_priority_no</item>
        <item>@string/modify_priority_yes</item>
    </string-array>

    <string name="title_activity_default">DefaultActivity</string>
    <string name="title_activity_modify_task">Edit task</string>
    <string name="title_activity_view_task">View task</string>
    <string name="title_activity_video">Play video</string>
    
    <!-- Flashcards -->
    <string name="title_view_deck">Browse decks</string>
    <string name="title_add_deck">Add or edit decks</string>
    <string name="title_view_card">Browse cards</string>
    <string name="title_add_card">Add or edit cards</string>  
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="action_front">See back</string>
    <string name="action_back">See front</string>
    <string name="add_deck">Add deck</string>
    <string name="add_deck_name_label">Name</string>
    <string name="add_deck_name_hint">Deck title</string>
    <string name="add_deck_save_label">" Save "</string>
    <string name="add_deck_cancel_label">Cancel</string>
  
    
    <string name="add_card">Add card</string>
    <string name="add_front_name_label">Front</string>
    <string name="add_front_name_hint">Front of card</string>
    <string name="add_back_name_label">Back</string>
    <string name="add_back_name_hint">Back of card</string>
    <string name="add_card_save_label">" Save "</string>
    <string name="add_card_cancel_label">Cancel</string>
    
    
    <string name="menu_audio">Audio</string>
    <string name="menu_photo">Photo</string>
    <string name="menu_video">Video</string>
    <string name="menu_text">Text</string>
    <string name="menu_handwriting">Writing</string>
    <string name="menu_flashcards">Cards</string>    
    <string name="menu_cal">Dates</string>
    <string name="menu_tasks">Tasks</string>    
    <string name="menu_notes">Notes</string>    
    
	<string name="about_title">About</string>    
    <string name="about_msg">Tom Conaway, Nik LaBelle, Wesley Liang, Uyen Nguyen, \nAnthony Sager, Xintong Shi, and Alex Swanson\n\nCSUN Computer Science</string>    
	<string name="close">Close</string>    
    
    
  
        
  
</resources>
