<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.studybuddy.CalenActivity" >

    
    <item 
        android:id="@+id/addEvent"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        android:icon="@drawable/ic_action_new"
        android:title="@string/action_add_event"/>
    
    <item 
        android:id="@+id/editEvent"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        android:icon="@drawable/ic_action_edit"
        android:title="@string/action_edit_event"/>
    
    <item 
        android:id="@+id/createEvent"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        android:icon="@drawable/ic_action_accept"
        android:title="@string/action_create_event"/>
    
    
    	<item
        android:id="@+id/action_launch_text"
        android:title="@string/menu_notes"
        />

        <item android:id="@+id/action_launch_flashcards"
        android:title="@string/menu_flashcards"
        />
          
        
      <item 
        android:id="@+id/action_launch_todo"
        android:title="@string/menu_tasks"
        />
    

</menu>
