<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.comp490.studybuddy.note.NoteActivity" >

    <item
        android:id="@+id/action_draw"
        android:icon="@drawable/ic_action_edit"
        android:showAsAction="ifRoom|collapseActionView"
        android:title="@string/action_draw"/>
    <item
        android:id="@+id/action_record_sound"
        android:actionLayout="@layout/action_view_sound"
        android:icon="@drawable/ic_action_mic"
        android:showAsAction="ifRoom|collapseActionView"
        android:title="@string/action_record_sound"/>
    <item
        android:id="@+id/action_take_photo"
        android:icon="@drawable/ic_action_camera"
        android:showAsAction="ifRoom"
        android:title="@string/action_take_photo"/>
    <item
        android:id="@+id/action_take_video"
        android:icon="@drawable/ic_action_video"
        android:showAsAction="ifRoom"
        android:title="@string/action_take_video"/>
    <item
        android:id="@+id/action_create_text"
        android:icon="@drawable/ic_action_keyboard"
        android:showAsAction="ifRoom"
        android:title="@string/action_create_text"/>
    <item
        android:id="@+id/action_save_note"
        android:showAsAction="never"
        android:title="@string/action_save_note"/>
    <item
        android:id="@+id/action_screen_orientation"
        android:showAsAction="never"
        android:title="@string/action_orientation"/>
    
    <!-- 
    <item
        android:id="@+id/action_launch_flashcards"
        android:title="@string/menu_flashcards"/>
    <item
        android:id="@+id/action_launch_calendar"
        android:title="@string/menu_cal"/>
    <item
        android:id="@+id/action_launch_todo"
        android:title="@string/menu_tasks"/>
	-->
</menu>