<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <Button
        android:id="@+id/bActionSoundRecord"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/action_button_record" 
		android:contentDescription="@string/action_record_sound"/>

    <ImageButton
        android:id="@+id/ibActionSoundPlay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_action_play"
        android:contentDescription="@string/action_play_sound"/>

    <ImageButton
        android:id="@+id/ibActionSoundStop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_action_stop"
        android:contentDescription="@string/action_stop_sound" />

    <ImageButton
        android:id="@+id/ibActionSoundPause"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_action_pause"
        android:contentDescription="@string/action_pause_sound" />
    
    <ImageButton
        android:id="@+id/ibActionSoundSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/action_save"
        android:src="@drawable/ic_action_save" />
</LinearLayout>