<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.comp490.studybuddy.ToDoMain" >

    <item
        android:id="@+id/view_all_tasks_actionbar_add"
        android:icon="@drawable/ic_action_new"
        android:showAsAction="always"
        android:title="@string/main_actionbar_add_title"/>
    
            
      <item 
        android:id="@+id/action_launch_text"
        android:title="@string/menu_notes"
        />
    
            <item android:id="@+id/action_launch_flashcards"
        android:title="@string/menu_flashcards"
        />
        
                <item
        android:id="@+id/action_launch_calendar"
        android:title="@string/menu_cal"
        />

</menu>
