<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.studybuddy.TextNote" >

    <item android:id="@+id/action_record_sound"
        android:icon="@drawable/ic_action_mic"
        android:title="@string/action_record_sound"
        android:showAsAction="ifRoom|collapseActionView" 
        android:actionLayout="@layout/action_view_sound"/>
    <item
        android:id="@+id/action_take_photo"
        android:icon="@drawable/ic_action_camera"
        android:showAsAction="ifRoom"
        android:title="@string/action_take_photo"/>
    
    <item
        android:id="@+id/action_create_text"
        android:icon="@drawable/ic_action_keyboard"
        android:showAsAction="ifRoom"
        android:title="@string/action_create_text"/>       
           
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>

</menu>
