<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/gridbackground" >

    <!-- Overlays the actionbar with sound options when mic is selected -->

    <ImageButton
        android:id="@+id/action_penWidth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:showAsAction="ifRoom|collapseActionView"
        android:src="@drawable/ic_action_width"
        android:title="@string/action_changePenWidth" >
    </ImageButton>

    <ImageButton
        android:id="@+id/action_penColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:showAsAction="ifRoom|collapseActionView"
        android:src="@drawable/ic_action_color"
        android:title="@string/action_changePenWidth" >
    </ImageButton>

    <ImageButton
        android:id="@+id/action_undo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_action_undo"
        android:showAsAction="ifRoom|collapseActionView"
        android:title="@string/action_undoDraw" >
    </ImageButton>

    <ImageButton
        android:id="@+id/action_redo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_action_redo"
        android:showAsAction="ifRoom|collapseActionView"
        android:title="@string/action_redoDraw" >
    </ImageButton>

    <ImageButton
        android:id="@+id/action_clearAll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_action_discard"
        android:showAsAction="ifRoom|collapseActionView"
        android:title="@string/action_clearAllDraw" >
    </ImageButton>

    <ImageButton
        android:id="@+id/action_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_action_save"
        android:showAsAction="ifRoom|collapseActionView"
        android:title="@string/action_saveDraw" >
    </ImageButton>

</LinearLayout>