<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="2dp"
        android:text="@string/add_deck_name_label" />

    <!-- Song name field -->

    <EditText
        android:id="@+id/deck_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:drawable/editbox_background"
        android:hint="@string/add_deck_name_hint" />

    <!-- Buttons for save and cancel -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:paddingTop="10dp" >

        <Button
            android:id="@+id/deck_save"
            style="?android:textAppearance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="15dp"
            android:padding="3dp"
            android:text="@string/add_deck_save_label" />

        <Button
            android:id="@+id/deck_cancel"
            style="?android:textAppearance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="3dp"
            android:text="@string/add_deck_cancel_label" />
    </LinearLayout>

</LinearLayout>