<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >
    
        <ImageButton
        android:id="@+id/ibActionSoundPlay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_action_play"
        android:contentDescription="@string/action_play_sound" />

    <ImageButton
        android:id="@+id/ibActionSoundStopPlay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_action_stop"
        android:contentDescription="@string/action_stop_sound" />
    
    <ImageButton
        android:id="@+id/ibActionSoundPause"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/action_pause_sound"
        android:src="@drawable/ic_action_pause" />
</LinearLayout>