<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin" 
        tools:context="com.comp490.studybuddy.todolist.ViewTask" 
         >


    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:stretchColumns="1" >
                <TableRow>
            <TextView
                android:layout_marginTop="5dp"
                android:id="@+id/view_priority"
                android:padding="2dp"
                android:text=" "            
                android:textColor="#0099FF"
                android:textAppearance="?android:attr/textAppearanceSmall"/>
        </TableRow>
        <TableRow>     
            <TextView
                android:layout_marginBottom="5dp"
                android:id="@+id/view_textview_priority"
                android:padding="2dp"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </TableRow>
        
              <View
            android:layout_height="1dp"
            android:background="#d3d3d3" />

        <TableRow>
            <TextView
                android:layout_marginTop="5dp"
                android:id="@+id/view_name"
                android:padding="2dp"
                android:text="@string/task_name_label"
                android:textColor="#0099FF"
                android:textAppearance="?android:attr/textAppearanceSmall" />
      </TableRow>
      <TableRow>           
            <TextView
                android:id="@+id/view_textview_name"
                android:padding="2dp"
                android:textAppearance="?android:attr/textAppearanceMedium"                 
                android:layout_marginBottom = "5dp" /> 
      </TableRow>

              <View
            android:layout_height="1dp"
            android:background="#d3d3d3" />
      
      <TableRow>
            <TextView
                android:layout_marginTop="5dp"
                android:id="@+id/view_date"
                android:padding="2dp"
                android:text="@string/task_date_label"
                android:textColor="#0099FF"
                android:textAppearance="?android:attr/textAppearanceSmall"/>        
      </TableRow> 
      <TableRow>
            <TextView
                android:id="@+id/view_textview_date"
                android:padding="2dp"
                android:textAppearance="?android:attr/textAppearanceMedium" 
                android:layout_marginBottom = "5dp"/>
        </TableRow>

              <View
            android:layout_height="1dp"
            android:background="#d3d3d3" />
        
        <TableRow>
            <TextView
                android:layout_marginTop="5dp"
                android:id="@+id/view_time"
                android:padding="2dp"
                android:text="@string/task_time_label"            
                android:textColor="#0099FF"
                android:textAppearance="?android:attr/textAppearanceSmall"/>
        </TableRow>
        <TableRow>     
            <TextView
                android:layout_marginBottom="5dp"
                android:id="@+id/view_textview_time"
                android:padding="2dp"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </TableRow>

<!--                <View
            android:layout_height="1dp"
            android:background="#d3d3d3" />


       <TableRow>
            <TextView
                android:layout_marginTop="5dp"
                android:id="@+id/view_notification"
                android:padding="2dp"
                android:text="@string/task_notification_label"            
                android:textColor="#0099FF"
                android:textAppearance="?android:attr/textAppearanceSmall"/>
        </TableRow>
        <TableRow>
          <TextView
                android:layout_marginBottom="5dp"
                android:id="@+id/view_textview_notification"
                android:padding="2dp"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </TableRow> -->
        
    </TableLayout>

</ScrollView>